--- a/abstracts1.html
+++ b/abstracts1.html
@@ -6,8 +6,9 @@ to Present Research at the Annual African Phytopathology Group
 Meeting on August 18, 2022 "
 show-avatar: true
 nav-short: false
+css: "/assets/css/aboutme.css"
 ---
 
 <div style="text-align: center; margin-top: 90px;">
-  <iframe src="https://aps-pd-communications.github.io/abstracts2022.pdf" scrolling="no" width="850px" height="1100px" frameBorder="0"></iframe>
+  <iframe src="https://aps-pd-communications.github.io/abstracts2022.pdf" scrolling="no" width="850px" height="1500px" frameBorder="0"></iframe>
 </div>
