--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: home
 css: "/assets/css/aboutme.css"
 ---
 
-<a href="/abstracts">Abstracts call 2022</a>
+<a href="/abstracts">Abstract call 2022</a>
 </p>
