--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@ layout: home
 css: "/assets/css/aboutme.css"
 ---
 
-<a href="https://aps-pd-communications.github.io/abstracts2022.pdf/">Abstract call 2022</a>
+<a href="https://aps-ad-communications.github.io/abstracts2022.pdf/">Abstract call 2022</a>
 </p>
 
-<a src="https://aps-pd-communications.github.io/abstracts2022.pdf">APS-AD Abstract call for 2022</a>
-</p>
-
-<a href="https://aps-pd-communications.github.io/abstracts2022.pdf">APS African Division Abstract call for 2022</a>
+<a href="https://aps-ad-communications.github.io/abstracts2022.pdf">APS African Division Abstract call for 2022</a>
