--- a/abstracts.html
+++ b/abstracts.html
@@ -9,6 +9,4 @@ nav-short: false
 css: "/assets/css/aboutme.css"
 ---
 
-<div style="text-align: center; margin-top: 90px;">
-  <iframe src="https://aps-pd-communications.github.io/abstracts2022.pdf" scrolling="no" width="1200px" height="1400px" frameBorder="0"></iframe>
-</div>
+<a href="https://aps-ad-communications.github.io/abstracts2022.pdf">APS African Division Abstract call for 2022</a>
