--- a/index.html
+++ b/index.html
@@ -2,5 +2,21 @@
 layout: home
 css: "/assets/css/aboutme.css"
 ---
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SG14EYMK5T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SG14EYMK5T');
+</script>
+
+</head>
 
 <a href="https://aps-ad-communications.github.io/abstracts2022.pdf">APS African Division Abstract call for 2022</a>
+
