--- a/abstracts.html
+++ b/abstracts.html
@@ -10,3 +10,7 @@ css: "/assets/css/aboutme.css"
 ---
 
 <a href="https://aps-ad-communications.github.io/abstracts2022.pdf">APS African Division Abstract call for 2022</a>
+
+<a href="https://aps-ad-communications.github.io/abstracts2022.pdf" target=”_blank” onclick=”_gaq.push([‘_trackEvent’,’Download’,’PDF’,this.href]);”>APS African Division Abstract call for 2022_1</a>
+
+<a href="https://aps-ad-communications.github.io/abstracts2022.pdf?pdf=abstract" target=”_blank” onclick=”_gaq.push([‘_trackEvent’,’Download’,’PDF’,this.href]);”>APS African Division Abstract call for 2022_2</a>
